syntax = "proto3";

package info.matsumana.armeria.grpc;
option java_package = "info.matsumana.armeria.grpc";

service Hello2Service {
    rpc Hello (Hello2Request) returns (Hello2Response) {
    }
}

message Hello2Request {
    string name = 1;
}

message Hello2Response {
    string serverName = 1;
    string message = 2;
}
